# Proyecto-Accidentes-de-Tr-nsito

./: README.md  modelos_ml.py  pyproject.toml
mlartifacts/922992242764108024/287bc1abf0df45c3a85b792648f034a0/artifacts/random-forest-model/: MLmodel  model.pkl
mlruns/0/: meta.yaml
mlruns/922992242764108024/: meta.yaml
mlruns/922992242764108024/287bc1abf0df45c3a85b792648f034a0/: meta.yaml
mlruns/922992242764108024/287bc1abf0df45c3a85b792648f034a0/metrics/: mse
mlruns/922992242764108024/287bc1abf0df45c3a85b792648f034a0/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.name
