[tool.poetry]
name = "proyecto-accidentes-de-tr-nsito"
version = "0.1.0"
description = ""
authors = ["Ricardo <raib1997@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
h2o = "^3.46.0.6"
imblearn = "^0.0"
math0 = "^1.1"
shapely = "^2.0.6"
statsmodels = "^0.14.4"
xgboost = "^2.1.2"
TPOT = "^0.12.2"
scikit-learn = "^1.5.2"
ruff = "^0.8.0"
mlflow = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
